Add core application files

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
+--extra-index-url https://download.pytorch.org/whl/cu121
+torch==2.5.1+cu121
+torchvision==0.20.1+cu121
+torchaudio==2.5.1+cu121
+streamlit
+ultralytics
 easyocr
 opencv-python
 pandas
@@ -15,4 +21,4 @@ pymupdf
 python-docx
 spacy
 PyPDF2
-
+tqdm
